build: add workaround for nexus plugin (#830)
* build: add workaround for nexus plugin

* build: try with maven opts

* build: add workaround for nexus plugin